improved the median filter speed

--- a/man/solve-field.1
+++ b/man/solve-field.1
@@ -95,6 +95,9 @@ Write 'augmented xy list' (axy) file to a temp file
 \fB\-\-timestamp\fR
 Add timestamps to log messages
 .TP
+\fB\-\-dselip\-qsort\fR
+Use legacy qsort-based median selection (for benchmarking / comparison)
+.TP
 \fB\-7\fR, \fB\-\-no-delete-temp\fR
 Don't delete temp files (for debugging)
 .TP
